--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google" content="notranslate">
+        <link rel="manifest" href="./manifest.json">
         <link rel="manifest" href="./workbox-sw.js">
         <!-- <link rel="manifest" href="./manifest.json"> -->
     </head>
